# pakpos

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  cliff.toml  release.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  lib.rs  main.rs  models.rs  net.rs  storage.rs
src/models/: editor_tab.rs  method.rs  mod.rs  request.rs  workspace.rs
src/ui/: button.rs  indent.rs  mod.rs  text.rs  text_input.rs
