[package]
name = "pakpos"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["highlighter", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = [
  "form",
  "json",
  "multipart",
  "query",
] }
uuid = { version = "1.21.0", features = ["v4"] }
