[package]
name = "pakpos"
version = "0.2.2"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
  "crisp",
  "highlighter",
  "thread-pool",
  "linux-theme-detection",
  "tiny-skia",
  "tokio",
  "wayland",
  "web-colors",
  "svg",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", default-features = false, features = [
  "query",
  "rustls",
] }
uuid = { version = "1.21.0", features = ["v4"] }

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
strip = true      # Strip symbols from binary
