[package]
name = "pakpos"
version = "0.2.4"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["highlighter", "tokio", "svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", default-features = false, features = [
  "query",
  "rustls",
] }
uuid = { version = "1.21.0", features = ["v4"] }

[profile.release]
opt-level = "z" # Optimize for size
lto = true      # Enable Link Time Optimization
strip = true    # Strip symbols from binary
